[package]
name = "snowflake_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"


[[example]]
name = "multithread_generate_ids"
path = "./examples/multithread_generate_ids.rs"


[[bench]]
name = "benchmark"
harness = false
