[package]
name = "snowflake_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"


[[example]]
name = "multi_thread_example"
path = "examples/multi_thread_example.rs"

[[example]]
name = "single_thread_example"
path = "examples/single_thread_example.rs"

[[bench]]
name = "snowflake_benchmarks"
path = "benches/snowflake_benchmarks.rs"
harness = false