[package]
name = "snowgen"
version = "0.1.0"
edition = "2021"
authors = ["IronC <apehuang123@gmail.com>"]
description = "A Rust library for generating unique, time-based IDs using the Snowflake algorithm."
homepage = "https://github.com/hxuchen/snowflake_rs"
repository = "https://github.com/hxuchen/snowflake_rs"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/snowflake_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"


[[example]]
name = "multi_thread_example"
path = "examples/multi_thread_example.rs"

[[example]]
name = "single_thread_example"
path = "examples/single_thread_example.rs"

[[bench]]
name = "snowflake_benchmarks"
path = "benches/snowgen_benchmarks.rs"
harness = false